--- a/Bài tập lớn/index.html
+++ b/Bài tập lớn/index.html
@@ -1,1 +1,27 @@
-
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="uf8">
+        <title>Bài tập lớn NHÓM 6</title>
+        <style>
+            .nav{ min-height: 30px; 
+                background-color: red; 
+                display: flex; justify-content: space-between;
+                
+             }
+             .nav-items{ color: aliceblue; list-style: none; display: inline-block; margin: auto 50px; font-size: 20px;  }
+        </style>
+    </head>
+    <body>
+        <div class="nav">
+            <ul class="nav-list">
+                <li class="nav-items">Trang chủ</li>
+                <li class="nav-items">Danh sách khóa học</li>
+                <li class="nav-items">Chi tiết khóa học</li>
+                <li class="nav-items">Bài giảng cụ thể</li>
+                <li class="nav-items">Hồ sơ người dùng</li>
+                <li class="nav-items">Thông tin liên hệ</li>
+            </ul>
+        </div>
+    </body>
+</html>
