--- a/baitaplon/courses2.html
+++ b/baitaplon/courses2.html
@@ -4,7 +4,7 @@
         <meta charset="uf8">
         <title>Bài tập nhóm 6</title>
         <style>
-            header { background: url(https://www.bhmpics.com/downloads/purple-and-black-background-/22.modern-black-and-purple-background-graphics-23019613-1.jpg) }
+            header { background: url(https://www.bhmpics.com/downloads/purple-and-black-background-/22.modern-black-and-purple-background-graphics-23019613-1.jpg) ; width: 100%;}
             ul { text-decoration: none; font-weight: bold;}
             li { list-style-type: none; display: inline; font-size: 20px; margin-right: 50px; margin-left: 10px;}
             a  {text-decoration: none; color: black;}
@@ -29,8 +29,8 @@
             <div class="div2">
                 <nav>
                     <ul class="nav_item1">
-                        <li><a href="https://nhomchude6.github.io/baitaplon/index.html">Trang Chủ</a></li>
-                        <li><a href="https://nhomchude6.github.io/baitaplon/courses.html">Khóa học</a></li>
+                        <li><a href="https://nhomchude6.github.io/baitaplon/index2.html">Trang Chủ</a></li>
+                        <li><a href="https://nhomchude6.github.io/baitaplon/courses2.html">Khóa học</a></li>
                         <li><a href="">Hồ sơ người dùng</a></li>
                         <li><a href="">Thông tin liên hệ</a></li>
                     </ul>
@@ -40,11 +40,10 @@
         </header>
 
         <div class="div3">
-            <img class="items" src="https://cdn.ngochuyenlb.edu.vn/classrooms/2023/11/21/20231121164745-cp72qt0hq3.jpg" width="300px" height="300px"  alt="">
-            <img class="items" src="https://cdn.ngochuyenlb.edu.vn/classrooms/2023/01/11/20230111100931-fnor80khho.jpg" width="300px" height="300px" alt="">
-            <img class="items" src="https://cdn.ngochuyenlb.edu.vn/classrooms/2023/05/20/20230520083321-qftmw7fy9t.png" width="300px" height="300px" alt="">
-            <img class="items" src="https://cdn.ngochuyenlb.edu.vn/classrooms/2023/11/21/20231121164807-jwnx4bkom6.jpg" width="300px" height="300px" alt="">
-           
+            <a href=""><img class="items" src="https://cdn.ngochuyenlb.edu.vn/classrooms/2023/11/21/20231121164745-cp72qt0hq3.jpg" width="300px" height="300px"  alt=""></a>
+            <a href=""><img class="items" src="https://cdn.ngochuyenlb.edu.vn/classrooms/2023/01/11/20230111100931-fnor80khho.jpg" width="300px" height="300px" alt=""></a>
+            <a href=""><img class="items" src="https://cdn.ngochuyenlb.edu.vn/classrooms/2023/05/20/20230520083321-qftmw7fy9t.png" width="300px" height="300px" alt=""></a>
+            <a href=""><img class="items" src="https://cdn.ngochuyenlb.edu.vn/classrooms/2023/11/21/20231121164807-jwnx4bkom6.jpg" width="300px" height="300px" alt=""></a>
         </div>
     </body>
 </html>
