--- a/baitaplon/index2.html
+++ b/baitaplon/index2.html
@@ -26,7 +26,7 @@
             <div class="div2">
                 <nav>
                     <ul class="nav_item1">
-                        <li><a href="https://nhomchude6.github.io/baitaplon/index.html">Trang Chủ</a></li>
+                        <li><a href="https://nhomchude6.github.io/baitaplon/index2.html">Trang Chủ</a></li>
                         <li><a href="https://nhomchude6.github.io/baitaplon/courses2.html">Khóa học</a></li>
                         <li><a href="">Hồ sơ người dùng</a></li>
                         <li><a href="">Thông tin liên hệ</a></li>
