--- a/wireframes/wireframes.html
+++ b/wireframes/wireframes.html
@@ -15,14 +15,14 @@
 <body>
     <div class="items">
         <div class="layout">
-            <img class="img1" src="Trang chủ.jpg" alt="Trang chủ">
+            <img class="img1" src="trangchu.jpg" alt="">
           <div class="outlay">
             <span>Trang chủ</span>
           </div>
         </div>
 
         <div class="layout">
-            <img class="img2" src="khóa học.jpg" alt="">
+            <img class="img2" src="khoahoc.jpg" alt="">
             <div class="outlay">
                 <span>Khóa học</span>
             </div>
@@ -30,7 +30,7 @@
         </div>
 
         <div class="layout">
-            <img class="img3" src="Hồ sơ người dùng.jpg" alt="">
+            <img class="img3" src="hosongdung.jpg" alt="">
            <div class="outlay">
             <span>Hồ sơ người dùng</span>
            </div>
