--- a/wireframes/wireframes.html
+++ b/wireframes/wireframes.html
@@ -15,14 +15,14 @@
 <body>
     <div class="items">
         <div class="layout">
-            <img class="img1" src="z5305427260544_ffd0d58c5981518fd246003c209fdce9.jpg" alt="">
+            <img class="img1" src="https://nhomchude6.github.io/wireframes/z5305427260544_ffd0d58c5981518fd246003c209fdce9.jpg" alt="">
           <div class="outlay">
             <span>Trang chủ</span>
           </div>
         </div>
 
         <div class="layout">
-            <img class="img2" src="z5305430555949_3cf070ed90ed65f701d1a3151918090b.jpg" alt="">
+            <img class="img2" src="https://nhomchude6.github.io/wireframes/z5305430555949_3cf070ed90ed65f701d1a3151918090b.jpg" alt="">
             <div class="outlay">
                 <span>Khóa học</span>
             </div>
@@ -30,7 +30,7 @@
         </div>
 
         <div class="layout">
-            <img class="img3" src="z5305432219381_82f41ff4b0c3a7940883f646f3b8a12d.jpg" alt="">
+            <img class="img3" src="https://nhomchude6.github.io/wireframes/z5305432219381_82f41ff4b0c3a7940883f646f3b8a12d.jpg" alt="">
            <div class="outlay">
             <span>Hồ sơ người dùng</span>
            </div>
