--- a/baitaplon/index2.html
+++ b/baitaplon/index2.html
@@ -20,14 +20,14 @@
     <body>
         <header>
             <div class="logo">
-                <img src="https://static.ladipage.net/5c20aae11a04955688de1840/uovo_ngoc-huyen-lb-logo_fn-01-20201023095115.png" width="291px" height="100px"  alt="">
+                <img src="https://cdn.ngochuyenlb.edu.vn/assets/img/ngochuyenlb-logo-white.png?v=1.0" width="358px" height="70px"  alt="">
                 
             </div>
             <div class="div2">
                 <nav>
                     <ul class="nav_item1">
                         <li><a href="https://nhomchude6.github.io/baitaplon/index2.html">Trang Chủ</a></li>
-                        <li><a href="https://nhomchude6.github.io/baitaplon/courses2.html">Khóa học</a></li>
+                        <li><a href="https://nhomchude6.github.io/baitaplon/courses3.html">Khóa học</a></li>
                         <li><a href="">Hồ sơ người dùng</a></li>
                         <li><a href="">Thông tin liên hệ</a></li>
                     </ul>
