--- a/project/khoahoc.html
+++ b/project/khoahoc.html
@@ -38,7 +38,7 @@
                 <nav>
                     <ul class="nav_item1">
                         <li><a href="https://nhomchude6.github.io/baitaplon/index2.html">Trang Chủ</a></li>
-                        <li><a href="https://nhomchude6.github.io/baitaplon/courses4.html">Khóa học</a></li>
+                        <li><a href="https://nhomchude6.github.io/project/khoahoc.html">Khóa học</a></li>
                         <li><a href="">Hồ sơ người dùng</a></li>
                         <li><a href="">Thông tin liên hệ</a></li>
                     </ul>
@@ -48,7 +48,7 @@
         </header>
         <div class="div3">
             <img class="img2" src="https://learnenglish.britishcouncil.org/sites/podcasts/files/styles/1280x500/public/2023-04/RS9171_GettyImages-1391836113_1440x960.jpg?itok=tOgk6wtV" alt="">
-            
+            https://nhomchude6.github.io/project/khoahoc.html
             <div class="div31" >
 
                 <h1 style="color: rgb(49, 49, 249);">Skills</h1>
