--- a/project/khoahoc.html
+++ b/project/khoahoc.html
@@ -103,7 +103,7 @@
 
             <img class="img3" src="https://learnenglish.britishcouncil.org/sites/podcasts/files/styles/430x261_4/public/2021-10/RS5825_169280449-hig.jpg?itok=TCPKpAoq" alt="">
             <div class="div9-items">
-                <h1 class="h33">Reading</h1>
+                <h1 class="h33"><a href="https://nhomchude6.github.io/project/khoahoc2.html">Reading</a></h1>
                 <p class="p2">Here you can find activities to practise your reading skills. Reading will help you to improve your understanding of the language and build your vocabulary.</p>
             </div>
 
