--- a/project/khoahoc2.html
+++ b/project/khoahoc2.html
@@ -31,7 +31,7 @@
                 <nav>
                     <ul class="nav_item1">
                         <li><a href="https://nhomchude6.github.io/baitaplon/index2.html">Trang Chủ</a></li>
-                        <li><a href="https://nhomchude6.github.io/baitaplon/courses4.html">Khóa học</a></li>
+                        <li><a href="nhomchude6.github.io/project/khoahocc.html">Khóa học</a></li>
                         <li><a href="">Hồ sơ người dùng</a></li>
                         <li><a href="">Thông tin liên hệ</a></li>
                     </ul>
