--- a/project/khoahoc2.html
+++ b/project/khoahoc2.html
@@ -33,7 +33,7 @@
                         <li><a href="https://nhomchude6.github.io/baitaplon/index2.html">Trang Chủ</a></li>
                         <li><a href="https://nhomchude6.github.io/project/khoahocc.html">Khóa học</a></li>
                         <li><a href="">Hồ sơ người dùng</a></li>
-                        <li><a href="">Thông tin liên hệ</a></li>
+                        <li><a href="#footerr">Thông tin liên hệ</a></li>
                     </ul>
                     
                 </nav>
@@ -102,7 +102,7 @@
 
 
 
-    <footer style="background-color: rgb(52, 82, 101); color: aliceblue;">
+    <footer id="footerr" style="background-color: rgb(52, 82, 101); color: aliceblue;">
         <style>
             .columb-layout { display: flex; margin: 20px 20px ; margin-left: 80px; border-radius: 10px 10px 0px 0px ;}
             .layout-item { flex: 1;}
