--- a/project/khoahoc22.html
+++ b/project/khoahoc22.html
@@ -39,7 +39,7 @@
                         <li><a href="https://nhomchude6.github.io/baitaplon/index2.html">Trang Chủ</a></li>
                         <li><a href="https://nhomchude6.github.io/project/khoahocc.html">Khóa học</a></li>
                         <li><a href="">Hồ sơ người dùng</a></li>
-                        <li><a href="">Thông tin liên hệ</a></li>
+                        <li><a href="#footerr">Thông tin liên hệ</a></li>
                     </ul>
                     
                 </nav>
@@ -101,7 +101,7 @@
             <h2>Practise writing with your classmates in live group classes, get writing support from a personal tutor in one-to-one lessons or practise writing by yourself at your own pace with a self-study course.</h2>
 
         </div>
-    <footer style="background-color: rgb(52, 82, 101); color: aliceblue;">
+    <footer id="footerr" style="background-color: rgb(52, 82, 101); color: aliceblue;">
             <div class="columb-layout">
                 <div class="layout-item">
                     <h2>CÔNG TY CỔ PHẦN GIÁO DỤC TRỰC TUYẾN VIỆT NAM </h2>
