--- a/project/khoahocc.html
+++ b/project/khoahocc.html
@@ -40,7 +40,7 @@
                         <li><a href="https://nhomchude6.github.io/baitaplon/index2.html">Trang Chủ</a></li>
                         <li><a href="https://nhomchude6.github.io/project/khoahocc.html">Khóa học</a></li>
                         <li><a href="">Hồ sơ người dùng</a></li>
-                        <li><a href="">Thông tin liên hệ</a></li>
+                        <li><a href="#footerr">Thông tin liên hệ</a></li>
                     </ul>
                     
                 </nav>
@@ -118,7 +118,7 @@
             <h2>Experience self-study sessions, live group classes and one-to-one courses with personal tutors in a safe and inclusive learning environment.</h2>
 
         </div>
-    <footer style="background-color: rgb(52, 82, 101); color: aliceblue;">
+    <footer id="footerr" style="background-color: rgb(52, 82, 101); color: aliceblue;">
             <div class="columb-layout">
                 <div class="layout-item">
                     <h2>CÔNG TY CỔ PHẦN GIÁO DỤC TRỰC TUYẾN VIỆT NAM </h2>
