--- a/project/khoahoc2.html
+++ b/project/khoahoc2.html
@@ -69,7 +69,7 @@
 
             <img class="img3" src="https://learnenglish.britishcouncil.org/sites/podcasts/files/styles/430x261_4/public/RS7865_ThinkstockPhotos-498708046-hig.jpg?itok=vXuLNoii" alt="">
             <div class="div8-items">
-                <h1 class="h33">A poster at work</h1>
+                <h1 class="h33"><a href="https://nhomchude6.github.io/project/reading1.html">A poster at work</a></h1>
                 <p class="p2">Read an invitation to an office event to practise and improve your reading skills.</p>
             </div>
         </div>
@@ -84,7 +84,7 @@
 
             <img class="img4 " src="https://learnenglish.britishcouncil.org/sites/podcasts/files/styles/430x261_4/public/2021-10/RS5825_169280449-hig.jpg?itok=TCPKpAoq" alt="">
             <div class="div9-items">
-                <h1 class="h33">A restaurant menu</h1>
+                <h1 class="h33"><a href="https://nhomchude6.github.io/project/reading2.html">A restaurant menu</a></h1>
                 <p class="p2">Read a menu to practise and improve your reading skills.</p>
             </div>
 
