--- a/project/writing2.html
+++ b/project/writing2.html
@@ -56,7 +56,7 @@
                 <ul class="nav_item1">
                     <li><a href="https://nhomchude6.github.io/baitaplon/index2.html">Trang Chủ</a></li>
                     <li><a href="https://nhomchude6.github.io/project/khoahocc.html">Khóa học</a></li>
-                    <li><a href="">Hồ sơ người dùng</a></li>
+                    <li><a href="https://nhomchude6.github.io/project/hosonguoidung.html">Hồ sơ người dùng</a></li>
                     <li><a href="#footerr">Thông tin liên hệ</a></li>
                 </ul>
                 
