--- a/project/khoahoc22.html
+++ b/project/khoahoc22.html
@@ -71,7 +71,7 @@
 
             <img class="img3" src="https://learnenglish.britishcouncil.org/sites/podcasts/files/styles/430x261_4/public/2021-10/RS6105_ThinkstockPhotos-513071681-hig.jpg?itok=aU2wa7bB" alt="">
             <div class="div8-items">
-                <h1 class="h33">A message to say you're late</h1>
+                <h1 class="h33"><a href="https://nhomchude6.github.io/project/writing1.html">A message to say you're late</a></h1>
                 <p class="p2">Learn how to write text messages to tell a friend you're going to be late.</p>
             </div>
         </div>
@@ -86,7 +86,7 @@
 
             <img class="img3" src="https://learnenglish.britishcouncil.org/sites/podcasts/files/styles/430x261_4/public/RS7984_GettyImages-556450171-hig.jpg?itok=-so7EZoo" alt="">
             <div class="div9-items">
-                <h1 class="h33">A noticeboard message</h1>
+                <h1 class="h33"><a href="https://nhomchude6.github.io/project/writing2.html">A noticeboard message</a></h1>
                 <p class="p2">Learn how to write a noticeboard message.</p>
             </div>
 
