--- a/project/trangchu.html
+++ b/project/trangchu.html
@@ -25,7 +25,7 @@
         <div class="div2">
             <nav>
                 <ul class="nav_item1">
-                    <li class="li1"><a href="https://nhomchude6.github.io/baitaplon/index2.html">Trang Chủ</a></li>
+                    <li class="li1"><a href="nhomchude6.github.io/project/trangchu.html">Trang Chủ</a></li>
                     <li class="li1"><a href="https://nhomchude6.github.io/project/khoahocc.html">Khóa học</a></li>
                     <li class="li1"><a href="https://nhomchude6.github.io/project/hosonguoidung.html">Hồ sơ người dùng</a></li>
                     <li class="li1"><a href="#footerr">Thông tin liên hệ</a></li>
@@ -86,7 +86,7 @@
                     <li>Model texts for all types of writing tasks.</li>
                     <li>Work on your reading skills to read more quickly and understand more.</li>
                 </ul>
-                <div class="div38" style="width: 230px; background-color: rgb(157, 157, 243); font-size: 40px; text-align: center; border-radius: 20px;"><a style="text-align: center;" href="">Star learning</a></div>
+                <div class="div38" style="width: 230px; background-color: rgb(157, 157, 243); font-size: 40px; text-align: center; border-radius: 20px;"><a style="text-align: center;" href="https://nhomchude6.github.io/project/khoahocc.html">Star learning</a></div>
            </div>
         </div>
 
@@ -112,7 +112,7 @@
 
         <div style="text-align: center; font-size: 20px; margin-top: 70px ;"><h1>Explore our free resources:</h1></div>
         <div class="div40" >
-            <p style="font-size: 30px; text-align: center;" class="p1">Listening | <a href="">Reading</a> | <a href="">Writing</a> | Speaking | Vocabulary</p>
+            <p style="font-size: 30px; text-align: center;" class="p1">Listening | <a href="https://nhomchude6.github.io/project/khoahoc2.html">Reading</a> | <a href="https://nhomchude6.github.io/project/khoahoc22.html">Writing</a> | Speaking | Vocabulary</p>
             
         </div>
 
