--- a/project/hosonguoidung.html
+++ b/project/hosonguoidung.html
@@ -54,7 +54,7 @@
         <div class="div2">
             <nav style="margin-bottom: 6px;">
                 <ul class="nav_item1">
-                    <li><a href="https://nhomchude6.github.io/baitaplon/index2.html">Trang Chủ</a></li>
+                    <li><a href="https://nhomchude6.github.io/project/trangchu.html">Trang Chủ</a></li>
                     <li><a href="https://nhomchude6.github.io/project/khoahocc.html">Khóa học</a></li>
                     <li><a href="">Hồ sơ người dùng</a></li>
                     <li><a href="#footerr">Thông tin liên hệ</a></li>
