--- a/project/trangchu.html
+++ b/project/trangchu.html
@@ -86,7 +86,7 @@
                     <li>Model texts for all types of writing tasks.</li>
                     <li>Work on your reading skills to read more quickly and understand more.</li>
                 </ul>
-                <div class="div38" style="width: 230px; background-color: rgb(157, 157, 243); font-size: 40px; text-align: center; border-radius: 20px;"><a style="text-align: center;" href="https://nhomchude6.github.io/project/khoahocc.html">Star learning</a></div>
+                <div class="div38" style="width: 230px; background-color: rgb(157, 157, 243); font-size: 40px; text-align: center; border-radius: 20px;"><a style="text-align: center;" href="https://nhomchude6.github.io/project/khoahocc.html">Start learning</a></div>
            </div>
         </div>
 
@@ -104,7 +104,7 @@
                     <li>Online exercises to help you check your understanding of the grammar points.</li>
                     <li>Use the grammar reference for further practice and more detailed explanations.</li>
                 </ul>
-                <div class="div38" style="width: 230px; background-color: rgb(157, 157, 243); font-size: 40px; text-align: center; border-radius: 20px;">Star learning</div>
+                <div class="div38" style="width: 230px; background-color: rgb(157, 157, 243); font-size: 40px; text-align: center; border-radius: 20px;">Start learning</div>
                 
             </div>
             <img class="imgdiv38" src="https://learnenglish.britishcouncil.org/sites/podcasts/files/styles/630x680/public/2023-04/RS8037_GettyImages-985388610_square.jpg?itok=IhmUSJuJ" width="700px" height="500px" alt="">
