--- a/project/khoahoc2.html
+++ b/project/khoahoc2.html
@@ -30,7 +30,7 @@
             <div class="div2">
                 <nav>
                     <ul class="nav_item1">
-                        <li><a href="https://nhomchude6.github.io/project/trangchu.html">Trang Chủ</a></li>
+                        <li><a href="https://nhomchude6.github.io/baitaplon/index2.html">Trang Chủ</a></li>
                         <li><a href="https://nhomchude6.github.io/project/khoahocc.html">Khóa học</a></li>
                         <li><a href="https://nhomchude6.github.io/project/hosonguoidung.html">Hồ sơ người dùng</a></li>
                         <li><a href="#footerr">Thông tin liên hệ</a></li>
@@ -61,14 +61,14 @@
         <div class="div8">
             <style>
                 .img3 {margin-top: 20px; width: 600px; height: 400px;}
-                .div8-items { font-size: 30px; margin-left: -100px;}
+                .div8-items { font-size: 25px; margin-left: 100px;}
                 .div8 { display: flex;}
                 .p2:hover { color: brown;}
-                
             </style>
 
             <img class="img3" src="https://learnenglish.britishcouncil.org/sites/podcasts/files/styles/430x261_4/public/RS7865_ThinkstockPhotos-498708046-hig.jpg?itok=vXuLNoii" alt="">
             <div class="div8-items">
+
                 <h1 class="h33"><a href="https://nhomchude6.github.io/project/reading1.html">A poster at work</a></h1>
                 <p class="p2">Read an invitation to an office event to practise and improve your reading skills.</p>
             </div>
@@ -77,13 +77,14 @@
         <div class="div9">
             <style>
                 .div9 { display: flex; }
-                .img4 {margin-top: 20px; width: 500px; height: 380px; border-radius: 50px 0px 50px 0px; margin-left: 1000px;}
-                .div9-items { font-size: 30px; margin-left: -1000px; text-align: left;}
+                .img3 {margin-top: 20px; width: 600px; height: 400px; border-radius: 50px 0px 50px 0px;}
+                .div9-items { font-size: 25px; margin-left: 100px;}
               
             </style>
 
-            <img class="img4 " src="https://learnenglish.britishcouncil.org/sites/podcasts/files/styles/430x261_4/public/2021-10/RS5825_169280449-hig.jpg?itok=TCPKpAoq" alt="">
+            <img class="img3" src="https://learnenglish.britishcouncil.org/sites/podcasts/files/styles/430x261_4/public/RS7851_ThinkstockPhotos-86491412-hig.jpg?itok=itIe8Kiz" alt="">
             <div class="div9-items">
+
                 <h1 class="h33"><a href="https://nhomchude6.github.io/project/reading2.html">A restaurant menu</a></h1>
                 <p class="p2">Read a menu to practise and improve your reading skills.</p>
             </div>
