--- a/project/trangchu.html
+++ b/project/trangchu.html
@@ -25,7 +25,7 @@
         <div class="div2">
             <nav>
                 <ul class="nav_item1">
-                    <li class="li1"><a href="nhomchude6.github.io/project/trangchu.html">Trang Chủ</a></li>
+                    <li class="li1"><a href="https://nhomchude6.github.io/project/trangchu.html">Trang Chủ</a></li>
                     <li class="li1"><a href="https://nhomchude6.github.io/project/khoahocc.html">Khóa học</a></li>
                     <li class="li1"><a href="https://nhomchude6.github.io/project/hosonguoidung.html">Hồ sơ người dùng</a></li>
                     <li class="li1"><a href="#footerr">Thông tin liên hệ</a></li>
