--- a/project/trangchu.html
+++ b/project/trangchu.html
@@ -8,7 +8,7 @@
 <body>
     <header>
         <style>
-             header { background: url(https://www.bhmpics.com/downloads/purple-and-black-background-/22.modern-black-and-purple-background-graphics-23019613-1.jpg) ; width: 100%;}
+             header {  background-color: cornflowerblue;}
             .nav_item1 { text-decoration: none; font-weight: bold;}
             .li1 { list-style-type: none; display: inline; font-size: 20px; margin-right: 50px; margin-left: 10px;}
             a  {text-decoration: none; color: black;}
